# tq_frontend

./: .gitignore  CMakeLists.txt  CppInterface.cpp  CppInterface.h  Dockerfile  README.md  build_frontend_desktop_docker_image.sh  build_frontend_web_light_docker_image.sh  build_push_frontend_desktop_docker_image.sh  build_push_frontend_web_light_docker_image.sh  cleanup.sh  main.cpp  main.qml  push_frontend_desktop_docker_image.sh  push_frontend_web_docker_image.sh  push_frontend_web_light_docker_image.sh  qt-noninteractive.qs  qtdeskDockerfile  qtwasmDockerfile  qtwasm_multistage_Dockerfile  qtwebDockerfile  resources.qrc
tests/: CMakeLists.txt  test_ex.cpp
